[package]
name = "minigen"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-core = { version = "0.3.31", optional = true }
# pollster = "0.4.0"
# tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
# reqwest = "0.12.12"
# tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }


[features]
stream = ["dep:futures-core"]
send = []
